# GoOllie

./: CMakeLists.txt  GoOllie.patch  goollie.spec
GoOllie-1.3/: CMakeLists.txt  COPYING  README
GoOllie-1.3/CMakeModules/: DpkgDeb.cmake  Rpmbuild.cmake
GoOllie-1.3/data/res/font/: KomikaText22.txt  KomikaText24.txt  KomikaText38.txt
GoOllie-1.3/data/res/levels/: level003.jld  level005.jld  level010.jld  level020.jld  level030.jld  level035.jld  level040.jld  level050.jld  level060.jld  level105.jld  level110.jld  level115.jld  level140.jld  level155.jld  level160.jld  level165.jld  level205.jld  level215.jld  level220.jld  level240.jld  level245.jld  level260.jld  level270.jld  level275.jld  level310.jld  level315.jld  level320.jld  level335.jld  level360.jld  level375.jld  level730.jld
GoOllie-1.3/src/: animationSets.py  cutScenes.py  game.py  levelData.py
data/res/font/: Arial8.txt  KomikaText36.txt
data/res/levels/: level015.jld  level025.jld  level045.jld  level055.jld  level065.jld  level070.jld  level075.jld  level120.jld  level125.jld  level130.jld  level135.jld  level145.jld  level150.jld  level170.jld  level175.jld  level210.jld  level225.jld  level230.jld  level235.jld  level250.jld  level255.jld  level265.jld  level305.jld  level325.jld  level330.jld  level340.jld  level345.jld  level350.jld  level355.jld  level365.jld  level370.jld  level710.jld  level720.jld
other_licenses/: licenses
src/: CMakeLists.txt  WorldTypes.py  config.py  cutScenes.py  cutScenesES.py  game.py  keyMap.py  levelData.py  levelDataES.py  main.cpp  messages.py  messagesES.py  metaGameData.py  newAnimation.py  particleEffects.py  tutorial.py
